Fix: icon button vertical align

--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -170,8 +170,8 @@ a.btn {
   //* Icon button
   &.btn-icon {
     position: relative;
-    top: 0.45ex;
     font-size: 20px;
+    vertical-align: top;
     padding: 10px;
     &.btn-sm {
       font-size: 16px;
